crates/runtime/tests/models/snapshots/integration_models__models__models_http_endpoint__models_response_no_status_no_metadata.snap
---
source: crates/runtime/tests/models/models_http_endpoint.rs
expression: "&models_response"
---
{
  "object": "list",
  "data": [
    {
      "id": "responses_model",
      "object": "model",
      "owned_by": "openai:gpt-4o-mini",
      "datasets": null,
      "status": null
    },
    {
      "id": "chat_model",
      "object": "model",
      "owned_by": "openai:gpt-4o-mini",
      "datasets": null,
      "status": null
    }
  ]
}
